--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,24 +1,24 @@
 [versions]
-agp = "8.2.0-alpha04"
+agp = "8.2.0-alpha10"
 kotlin = "1.8.10"
 core-ktx = "1.10.1"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 lifecycle-runtime-ktx = "2.6.1"
-activity-compose = "1.7.1"
-compose-bom = "2023.05.01"
-nav-version = "2.5.3"
+activity-compose = "1.7.2"
+compose-bom = "2023.06.01"
+nav-version = "2.6.0"
 kotlinx-serialization-plugin = "1.8.21"
 kotlinx-serialization = "1.5.1"
 ktor = "2.3.0"
 koin = "3.4.0"
 koin-compose = "3.4.4"
 kotlinx-datetime = "0.4.0"
-accompanist-webview = "0.31.2-alpha"
+accompanist-webview = "0.31.4-beta"
 datastore = "1.0.0"
 paging = "3.1.1"
-paging-compose = "3.2.0-beta01"
+paging-compose = "3.2.0-rc01"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
