--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,14 @@
 [versions]
 agp = "8.3.0-alpha04"
 kotlin = "1.8.10"
-core-ktx = "1.10.1"
+core-ktx = "1.12.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
-lifecycle-runtime-ktx = "2.6.1"
+lifecycle-runtime-ktx = "2.6.2"
 activity-compose = "1.7.2"
-compose-bom = "2023.08.00"
-nav-version = "2.7.1"
+compose-bom = "2023.09.00"
+nav-version = "2.7.2"
 kotlinx-serialization-plugin = "1.8.21"
 kotlinx-serialization = "1.5.1"
 ktor = "2.3.0"
@@ -17,8 +17,8 @@ koin-compose = "3.4.4"
 kotlinx-datetime = "0.4.0"
 accompanist-webview = "0.31.4-beta"
 datastore = "1.0.0"
-paging = "3.1.1"
-paging-compose = "3.2.0-rc01"
+paging = "3.2.1"
+paging-compose = "3.2.1"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
