--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,19 +6,20 @@ junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 lifecycle-runtime-ktx = "2.6.2"
-activity-compose = "1.7.2"
+activity-compose = "1.8.0-beta01"
 compose-bom = "2023.09.00"
 nav-version = "2.7.2"
 kotlinx-serialization-plugin = "1.8.21"
-kotlinx-serialization = "1.5.1"
-ktor = "2.3.0"
-koin = "3.4.0"
-koin-compose = "3.4.4"
-kotlinx-datetime = "0.4.0"
-accompanist-webview = "0.31.4-beta"
+kotlinx-serialization = "1.6.0"
+ktor = "2.3.4"
+koin = "3.5.0"
+koin-compose = "3.5.0"
+kotlinx-datetime = "0.4.1"
+accompanist-webview = "0.32.0"
 datastore = "1.0.0"
 paging = "3.2.1"
 paging-compose = "3.2.1"
+systemUiController = "0.33.1-alpha"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -57,6 +58,8 @@ datastore = { group = "androidx.datastore", name = "datastore-preferences", vers
 
 paging-runtime = { group = "androidx.paging", name = "paging-runtime", version.ref = "paging" }
 paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "paging-compose" }
+
+systemUiController = { group = "com.google.accompanist", name = "accompanist-systemuicontroller", version.ref = "systemUiController" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
