--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,14 @@
 [versions]
-agp = "8.3.0-alpha06"
+agp = "8.3.0-alpha17"
 kotlin = "1.8.10"
 core-ktx = "1.12.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 lifecycle-runtime-ktx = "2.6.2"
-activity-compose = "1.8.0-rc01"
-compose-bom = "2023.09.02"
-nav-version = "2.7.3"
+activity-compose = "1.8.1"
+compose-bom = "2023.10.01"
+nav-version = "2.7.5"
 kotlinx-serialization-plugin = "1.8.21"
 kotlinx-serialization = "1.6.0"
 ktor = "2.3.4"
