--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,13 @@
 [versions]
 agp = "8.4.0-alpha10"
-kotlin = "1.9.0"
+kotlin = "1.9.22"
 core-ktx = "1.12.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 lifecycle-runtime-ktx = "2.7.0"
 activity-compose = "1.8.2"
-compose-bom = "2024.02.00"
+compose-bom = "2024.02.01"
 nav-version = "2.7.6"
 kotlinx-serialization-plugin = "1.9.22"
 kotlinx-serialization = "1.6.0"
@@ -19,7 +19,7 @@ accompanist = "0.33.1-alpha"
 datastore = "1.0.0"
 paging = "3.2.1"
 paging-compose = "3.2.1"
-ksp = "1.9.0-1.0.13"
+ksp = "1.9.22-1.0.17"
 compose-destinations = "1.10.1"
 cloudy = "0.1.2"
 
@@ -62,7 +62,7 @@ paging-runtime = { group = "androidx.paging", name = "paging-runtime", version.r
 paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "paging-compose" }
 
 systemUiController = { group = "com.google.accompanist", name = "accompanist-systemuicontroller", version.ref = "accompanist" }
-compose-destinations-core = { group = "io.github.raamcosta.compose-destinations", name = "animations-core", version.ref = "compose-destinations" }
+compose-destinations-core = { group = "io.github.raamcosta.compose-destinations", name = "core", version.ref = "compose-destinations" }
 compose-destinations-ksp = { group = "io.github.raamcosta.compose-destinations", name = "ksp", version.ref = "compose-destinations" }
 
 cloudy = { group = "com.github.skydoves", name = "cloudy", version.ref = "cloudy" }
